--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 spring.datasource.url=jdbc:mysql://192.168.42.33/algafood?createDatabaseIfNotExist=true&serverTimezone=UTC
 spring.datasource.username=developer
 spring.datasource.password=dev123
+
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=create
