--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@ spring.datasource.url=jdbc:mysql://192.168.42.33/algafood?createDatabaseIfNotExi
 spring.datasource.username=developer
 spring.datasource.password=dev123
 
-#spring.jpa.generate-ddl=true
-#spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.properties.javax.persistence.schema-generation.scripts.action=create
+#spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=src/main/resources/ddl.sql
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
