--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,9 @@ spring.flyway.locations=classpath:db/migration,classpath:db/testdata
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+# Lançar um erro quando o usuário passar uma propriedade inexistente
+spring.jackson.deserialization.fail-on-unknown-properties=true
+
+# Lançar um erro quando o usuário passar uma propriedade marcado como JsonIgnore
+spring.jackson.deserialization.fail-on-ignored-properties=true
