--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,9 @@ spring.jackson.deserialization.fail-on-unknown-properties=true
 
 # Lançar um erro quando o usuário passar uma propriedade marcado como JsonIgnore
 spring.jackson.deserialization.fail-on-ignored-properties=true
+
+#Desabilitar recursos estáticos do projeto (pasta resources/static)
+spring.resources.add-mappings=false
+
+#Lançar uma exceção caso não haja uma URL mapeada
+spring.mvc.throw-exception-if-no-handler-found=true
