Configurando um banco de testes e usando @TestPropertySource

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,14 +7,14 @@ spring.flyway.locations=classpath:db/migration,classpath:db/testdata
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
-# LanÁar um erro quando o usu·rio passar uma propriedade inexistente
+# Lan√ßar um erro quando o usu√°rio passar uma propriedade inexistente
 spring.jackson.deserialization.fail-on-unknown-properties=true
 
-# LanÁar um erro quando o usu·rio passar uma propriedade marcado como JsonIgnore
+# Lan√ßar um erro quando o usu√°rio passar uma propriedade marcado como JsonIgnore
 spring.jackson.deserialization.fail-on-ignored-properties=true
 
-#Desabilitar recursos est·ticos do projeto (pasta resources/static)
+#Desabilitar recursos est√°ticos do projeto (pasta resources/static)
 spring.resources.add-mappings=false
 
-#LanÁar uma exceÁ„o caso n„o haja uma URL mapeada
+#Lan√ßar uma exce√ß√£o caso n√£o haja uma URL mapeada
 spring.mvc.throw-exception-if-no-handler-found=true
