--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,5 @@ spring.resources.add-mappings=false
 
 # Lançar uma exceção caso não haja uma URL mapeada
 spring.mvc.throw-exception-if-no-handler-found=true
+
+algafood.storage.local.diretorio-fotos=/home/breno/workspace/algafood/imagens
