--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,8 @@ spring.resources.add-mappings=false
 spring.mvc.throw-exception-if-no-handler-found=true
 
 algafood.storage.local.diretorio-fotos=/home/breno/workspace/algafood/imagens
+
+spring.mail.host=smtp.sendgrid.net
+spring.mail.port=587
+spring.mail.username=apikey
+#spring.mail.password=
