--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,9 +19,12 @@ spring.resources.add-mappings=false
 # Lançar uma exceção caso não haja uma URL mapeada
 spring.mvc.throw-exception-if-no-handler-found=true
 
+#Storage
 algafood.storage.local.diretorio-fotos=/home/breno/workspace/algafood/imagens
 
+#Eamil
 spring.mail.host=smtp.sendgrid.net
 spring.mail.port=587
 spring.mail.username=apikey
 #spring.mail.password=
+algafood.email.remetente=AlgaFood <naoresponder@algafood.com.br>
