--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,3 +28,5 @@ spring.mail.port=587
 spring.mail.username=apikey
 #spring.mail.password=
 algafood.email.remetente=AlgaFood <naoresponder@algafood.com.br>
+
+spring.freemarker.settings.locale=pt_BR
