--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,6 +27,8 @@ spring.mail.host=smtp.sendgrid.net
 spring.mail.port=587
 spring.mail.username=apikey
 #spring.mail.password=
-algafood.email.remetente=AlgaFood <naoresponder@algafood.com.br>
 
 spring.freemarker.settings.locale=pt_BR
+
+algafood.email.impl=fake
+algafood.email.remetente=AlgaFood <naoresponder@algafood.com.br>
