Desafio: Implementando serviço de envio de e-mail sandbox

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,5 +30,6 @@ spring.mail.username=apikey
 
 spring.freemarker.settings.locale=pt_BR
 
-algafood.email.impl=fake
+algafood.email.impl=sandbox
 algafood.email.remetente=AlgaFood <naoresponder@algafood.com.br>
+algafood.email.sandbox.destinatario=teste@algafood.com.br
