Comprimindo as respostas HTTP com Gzip

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,6 +19,9 @@ spring.resources.add-mappings=false
 # Lançar uma exceção caso não haja uma URL mapeada
 spring.mvc.throw-exception-if-no-handler-found=true
 
+# Compacta o retorno da requisição
+server.compression.enabled=true
+
 #Storage
 algafood.storage.local.diretorio-fotos=/home/breno/workspace/algafood/imagens
 
