Configurando o appender do Loggly no Logback

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,6 +22,9 @@ spring.mvc.throw-exception-if-no-handler-found=true
 # Compacta o retorno da requisição
 server.compression.enabled=true
 
+#Configurando o token do Loggly
+#logging.loggly.token=seu_customer_token_aqui
+
 #Storage
 algafood.storage.local.diretorio-fotos=/home/breno/workspace/algafood/imagens
 
