--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
 		<squiggly.version>1.3.18</squiggly.version>
 		<jasperreports.version>6.14.0</jasperreports.version>
 		<springfox.version>2.9.2</springfox.version>
+		<logback-ext-loggly.version>0.1.5</logback-ext-loggly.version>
 	</properties>
 
 	<dependencies>
@@ -151,6 +152,12 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-hateoas</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.logback-extensions</groupId>
+			<artifactId>logback-ext-loggly</artifactId>
+			<version>${logback-ext-loggly.version}</version>
 		</dependency>
 	</dependencies>
 
