Configurando o Resource Server com a nova stack do Spring Security

--- a/algafood-api/src/main/resources/application.properties
+++ b/algafood-api/src/main/resources/application.properties
@@ -39,3 +39,7 @@ spring.freemarker.settings.locale=pt_BR
 algafood.email.impl=fake
 algafood.email.remetente=AlgaFood <naoresponder@algafood.com.br>
 algafood.email.sandbox.destinatario=teste@algafood.com.br
+
+spring.security.oauth2.resourceserver.opaquetoken.introspection-uri=http://auth.algafood.local:8081/oauth/check_token
+spring.security.oauth2.resourceserver.opaquetoken.client-id=checktoken
+spring.security.oauth2.resourceserver.opaquetoken.client-secret=check123
