Configurando o Resource Server para JWT assinado com chave simétrica

--- a/algafood-api/src/main/resources/application.properties
+++ b/algafood-api/src/main/resources/application.properties
@@ -25,6 +25,9 @@ server.compression.enabled=true
 #Configurando o token do Loggly
 #logging.loggly.token=seu_customer_token_aqui
 
+#Configurando o nível de log
+logging.level.org.springframework=DEBUG
+
 #Storage
 algafood.storage.local.diretorio-fotos=/home/breno/workspace/algafood/imagens
 
@@ -40,6 +43,6 @@ algafood.email.impl=fake
 algafood.email.remetente=AlgaFood <naoresponder@algafood.com.br>
 algafood.email.sandbox.destinatario=teste@algafood.com.br
 
-spring.security.oauth2.resourceserver.opaquetoken.introspection-uri=http://auth.algafood.local:8081/oauth/check_token
-spring.security.oauth2.resourceserver.opaquetoken.client-id=checktoken
-spring.security.oauth2.resourceserver.opaquetoken.client-secret=check123
+#spring.security.oauth2.resourceserver.opaquetoken.introspection-uri=http://auth.algafood.local:8081/oauth/check_token
+#spring.security.oauth2.resourceserver.opaquetoken.client-id=checktoken
+#spring.security.oauth2.resourceserver.opaquetoken.client-secret=check123
