Configurando o Resource Server para JWT assinado com chave simétrica - Correção

--- a/algafood-api/bin/src/main/resources/application.properties
+++ b/algafood-api/bin/src/main/resources/application.properties
@@ -25,6 +25,9 @@ server.compression.enabled=true
 #Configurando o token do Loggly
 #logging.loggly.token=seu_customer_token_aqui
 
+#Configurando o nível de log
+#logging.level.org.springframework=DEBUG
+
 #Storage
 algafood.storage.local.diretorio-fotos=/home/breno/workspace/algafood/imagens
 
