--- a/algafood-api/src/main/resources/application.properties
+++ b/algafood-api/src/main/resources/application.properties
@@ -26,7 +26,7 @@ server.compression.enabled=true
 #logging.loggly.token=seu_customer_token_aqui
 
 #Configurando o nível de log
-logging.level.org.springframework=DEBUG
+#logging.level.org.springframework=DEBUG
 
 #Storage
 algafood.storage.local.diretorio-fotos=/home/breno/workspace/algafood/imagens
@@ -42,7 +42,3 @@ spring.freemarker.settings.locale=pt_BR
 algafood.email.impl=fake
 algafood.email.remetente=AlgaFood <naoresponder@algafood.com.br>
 algafood.email.sandbox.destinatario=teste@algafood.com.br
-
-#spring.security.oauth2.resourceserver.opaquetoken.introspection-uri=http://auth.algafood.local:8081/oauth/check_token
-#spring.security.oauth2.resourceserver.opaquetoken.client-id=checktoken
-#spring.security.oauth2.resourceserver.opaquetoken.client-secret=check123
