--- a/algafood-api/src/main/resources/application.properties
+++ b/algafood-api/src/main/resources/application.properties
@@ -28,6 +28,9 @@ server.compression.enabled=true
 #Configurando o nível de log
 #logging.level.org.springframework=DEBUG
 
+#Configurando o local da chave publica de acesso ao resource server
+spring.security.oauth2.resourceserver.jwt.public-key-location=classpath:keys/algafood-pkey.pem
+
 #Storage
 algafood.storage.local.diretorio-fotos=/home/breno/workspace/algafood/imagens
 
