--- a/algafood-ault/src/main/resources/application.properties
+++ b/algafood-ault/src/main/resources/application.properties
@@ -1,5 +1,11 @@
 server.port=8081
 
+spring.datasource.url=jdbc:mysql://192.168.42.33/algafood?createDatabaseIfNotExist=true&serverTimezone=UTC
+spring.datasource.username=developer
+spring.datasource.password=dev123
+spring.jpa.show-sql=true
+spring.datasource.hikari.maximum-pool-size=2
+
 algafood.jwt.keystore.path=keystores/algafood.jks
 algafood.jwt.keystore.password=123456
 algafood.jwt.keystore.keypair-alias=algafood
