--- a/algafood-api/src/main/resources/application.properties
+++ b/algafood-api/src/main/resources/application.properties
@@ -30,6 +30,9 @@ server.compression.enabled=true
 
 #Configurando o local da chave publica de acesso ao resource server
 spring.security.oauth2.resourceserver.jwt.public-key-location=classpath:keys/algafood-pkey.pem
+algafood.jwt.keystore.jks-location=classpath:keys/algafood.jks
+algafood.jwt.keystore.password=123456
+algafood.jwt.keystore.keypair-alias=algafood
 
 #Storage
 algafood.storage.local.diretorio-fotos=/home/breno/workspace/algafood/imagens
