--- a/algafood-api/src/main/resources/application.properties
+++ b/algafood-api/src/main/resources/application.properties
@@ -29,7 +29,7 @@ server.compression.enabled=true
 #logging.level.org.springframework=DEBUG
 
 #Configurando o local da chave publica de acesso ao resource server
-spring.security.oauth2.resourceserver.jwt.public-key-location=classpath:keys/algafood-pkey.pem
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:8080/.well-known/jwks.json
 algafood.jwt.keystore.jks-location=classpath:keys/algafood.jks
 algafood.jwt.keystore.password=123456
 algafood.jwt.keystore.keypair-alias=algafood
