--- a/algafood-api/src/main/resources/application.properties
+++ b/algafood-api/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://192.168.42.33/algafood?createDatabaseIfNotExist=true&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://${DB_HOST:192.168.42.33}/algafood?createDatabaseIfNotExist=true&serverTimezone=UTC
 spring.datasource.username=developer
 spring.datasource.password=dev123
 
