--- a/algafood-api/src/main/resources/application.properties
+++ b/algafood-api/src/main/resources/application.properties
@@ -7,6 +7,9 @@ spring.flyway.locations=classpath:db/migration,classpath:db/testdata
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
+# Desabilitar o armazenamento de token no redis (deixar desabilitado em dev)
+spring.session.store-type=none
+
 # Lançar um erro quando o usuário passar uma propriedade inexistente
 spring.jackson.deserialization.fail-on-unknown-properties=true
 
